teach demos to resolve dependencies

--- a/patterns/atoms/button/demo.sass
+++ b/patterns/atoms/button/demo.sass
@@ -1,4 +1,6 @@
-@import './index.sass' 
+@import 'Pattern'
+@import 'color'
+@import 'npm://flexiblegs-sass'
 
 .button__primary
-  background-color: red
+  background-color: $red
